# KG_RAG

./: .gitignore  KG_Build_2.1.py  KG_Embedding.py  KG_Similarity_gpu.py  app.py  pyproject.toml  resume.py  sheet.py  test.py  ui.py
.gradio/flagged/: dataset1.csv
